--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -60,6 +60,8 @@
         - "铜币:200:400:1"
         - "蚁狮上颚:1:2:0.33"
 风暴蚁狮:
+    buffImmute:
+        - "带电"
     buffInflict:
         - "带电|50|1"
     drop:
@@ -200,8 +202,6 @@
         - "铜币:70000:80000:1"
         - "强效治疗药水:5:10:1"
         - "强效魔力药水:5:10:1"
-        - "独角兽角:2:5:1"
-        - "妖精尘:5:20:1"
     buffImmute:
         - "中毒"
         - "燃烧"
@@ -214,6 +214,44 @@
     buffImmute:
         - "中毒"
         - "燃烧"
+妖精:
+    buffInflict:
+        - "诅咒|100|0.1"
+        - "缓慢|600|0.125"
+    drop:
+        - "铜币:500:1000:1"
+        - "妖精尘:1:3:1"
+独角兽:
+    drop:
+        - "铜币:2000:3000:1"
+        - "独角兽角:1:1:1"
+光明木乃伊:
+    drop:
+        - "铜币:1500:2000:1"
+        - "光明碎块:1:1:0.1"
+暗黑木乃伊:
+    drop:
+        - "铜币:1500:2000:1"
+        - "暗黑碎块:1:1:0.1"
+白羊座:
+    drop:
+        - "铜币:300:500:1"
+        - "星尘:1:3:0.5"
+    buffInflict:
+        - "幻星感染|40|1"
+    buffImmute:
+        - "中毒"
+        - "幻星感染"
+擎星者:
+    drop:
+        - "铜币:1500:2000:1"
+        - "星尘:7:9:1"
+        - "泰坦之心:1:1:1"
+    buffInflict:
+        - "幻星感染|100|1"
+    buffImmute:
+        - "中毒"
+        - "幻星感染"
 红恶魔:
     buffImmute:
         - "燃烧"
@@ -231,6 +269,16 @@
         - "铜币:5000:7000:1"
         - "丛林蜥蜴电池:1:1:0.02"
         - "日耀碑牌碎片:1:2:0.1429"
+瘟疫龟:
+    buffInflict:
+        - "瘟疫|60|1"
+    buffImmute:
+        - "中毒"
+        - "剧毒"
+        - "瘟疫"
+    drop:
+        - "铜币:1000:3000:1"
+        - "瘟疫细胞罐:3:4:1"
 装甲骷髅:
     drop:
         - "铜币:2000:3000:1"
@@ -310,6 +358,16 @@
         - "霜火"
         - "咒火"
         - "燃烧"
+星辉史莱姆:
+    drop:
+        - "铜币:250:750:1"
+        - "星尘:1:3:0.5"
+        - "炫星矿:11:16:1"
+    buffInflict:
+        - "幻星感染|40|1"
+    buffImmute:
+        - "中毒"
+        - "幻星感染"
 克苏鲁之眼:
     drop:
         - "弱效治疗药水:5:15:1"
