--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -46,6 +46,30 @@
         - "钨钢屏障生成仪:1:1:0.1"
         - "能源核心:1:1:0.35"
         - "钨钢电池:1:1:0.07"
+水母:
+    drop:
+        - "铜币:200:500:1"
+绿水母:
+    drop:
+        - "活力凝胶:1:1:0.125"
+蓝水母:
+    drop:
+        - "魔力凝胶:1:1:0.125"
+粉水母:
+    drop:
+        - "生命凝胶:1:1:0.125"
+巨像蛤:
+    drop:
+        - "铜币:7500:12500:1"
+        - "沉沦渊石:25:35:1"
+肉后巨像蛤:
+    drop:
+        - "铜币:40000:60000:1"
+        - "软体动物外壳:6:11:1"
+        - "波塞冬:1:1:0.25"
+        - "音波步枪:1:1:0.25"
+        - "海贝法杖:1:1:0.25"
+        - "海蚌锤:1:1:0.25"
 噬魂怪:
     drop:
         - "铜币:200:250:1"
