--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -150,7 +150,7 @@ FURNACE:
     - 发光蘑菇
   '30':
     requireLevel: 1
-    resultItem: 南瓜派:4
+    resultItem: 南瓜派
     requireItem:
     - 南瓜:12
   '31':
