world ticking mechanism
grass and chlorophyte ore spread; flower, tree and pumpkin growth; several bugfix and tweaks

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Essentials/config.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Essentials/config.yml
@@ -990,10 +990,10 @@ protect:
   blacklist:
 
     # Which blocks should people be prevented from placing?
-    placement: LAVA,TNT,LAVA_BUCKET
+    placement: 
 
     # Which items should people be prevented from using?
-    usage: LAVA_BUCKET
+    usage: 
 
     # Which blocks should people be prevented from breaking?
     break:
