--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/plugin_development/TerrariaHelper/pom.xml
@@ -38,6 +38,13 @@
             <systemPath>${project.basedir}/craftbukkit/craftbukkit-1.12.2.jar</systemPath>
         </dependency>
         <dependency>
+            <groupId>io.papermc</groupId>
+            <artifactId>paper</artifactId>
+            <version>1.12.2-1620</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/paper/paper-1.12.2-1620.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>eos.moe</groupId>
             <artifactId>dragoncore</artifactId>
             <version>2.5.6.6</version>
