world ticking and tree generation tweak

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -6185,9 +6185,8 @@
 叶绿矿:
   item: CLAY_BALL
   lore:
-  - §r右键丛林洞穴层的泥土可以把它埋进去
-  - §r在丛林洞穴层时或许会缓慢发生变化？
-  - §r“它似乎不喜欢拥挤”
+  - §r右键丛林洞穴层的石头可以把它埋进去
+  - §r在丛林洞穴层时会缓慢同化附近的石头
   worth: 150000
   rarity: 7
 叶绿锭:
