--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/server.properties
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/server.properties
@@ -1,8 +1,8 @@
 #Minecraft server properties
-#Sat Nov 12 15:25:21 MST 2022
-spawn-protection=16
+#Mon Jul 24 22:52:35 MDT 2023
+spawn-protection=0
 max-tick-time=60000
-server-name=Unknown Server
+server-name=Terraria
 generator-settings=
 force-gamemode=false
 allow-nether=true
@@ -11,14 +11,14 @@ broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=1
-spawn-monsters=true
+spawn-monsters=false
 op-permission-level=4
 pvp=true
 snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
-enable-command-block=false
-max-players=20
+enable-command-block=true
+max-players=25
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
@@ -28,7 +28,7 @@ server-ip=
 spawn-npcs=true
 allow-flight=true
 level-name=world
-view-distance=16
+view-distance=8
 resource-pack=
 spawn-animals=true
 white-list=false
@@ -37,5 +37,5 @@ online-mode=false
 max-build-height=256
 level-seed=
 prevent-proxy-connections=false
+motd=\u6b22\u8fce\u6765\u5230\u6cf0\u62c9\u745e\u4e9a
 enable-rcon=false
-motd=\u5728\u4F60\u770B\u5230\u672C\u6D88\u606F\u65F6\uFF0C\u670D\u52A1\u5668\u5927\u6982\u7387\u672A\u5B8C\u6210\u542F\u52A8
