--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/server.properties
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Jul 24 22:52:35 MDT 2023
+#Thu Jul 27 22:16:39 MDT 2023
 spawn-protection=0
 max-tick-time=60000
 server-name=Terraria
@@ -28,7 +28,7 @@ server-ip=
 spawn-npcs=true
 allow-flight=true
 level-name=world
-view-distance=8
+view-distance=12
 resource-pack=
 spawn-animals=true
 white-list=false
@@ -37,5 +37,5 @@ online-mode=false
 max-build-height=256
 level-seed=
 prevent-proxy-connections=false
-motd=\u6b22\u8fce\u6765\u5230\u6cf0\u62c9\u745e\u4e9a
+motd=\u6B22\u8FCE\u6765\u5230\u6CF0\u62C9\u745E\u4E9A
 enable-rcon=false
