--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/blocks.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/blocks.yml
@@ -368,7 +368,7 @@ ANVIL:
   totalProgress: 250
   dropItem:
   - 秘银砧
-BREWING_STAND_ITEM:
+BREWING_STAND:
   totalProgress: 120
   dropItem:
   - 酿造台
@@ -388,6 +388,12 @@ CHEST:
 ENCHANTMENT_TABLE:
   powerPickaxe: 999999
 SMOOTH_BRICK_1:
-  powerPickaxe: 999999
+  powerPickaxe: 200
+  totalProgress: 750
+  dropItem:
+  - 丛林蜥蜴砖
 SMOOTH_BRICK_2:
-  powerPickaxe: 999999
+  powerPickaxe: 65
+  totalProgress: 225
+  dropItem:
+  - 地牢砖
