--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -41,8 +41,248 @@
     items:
     - 初学者鱼饵:1:4:0.2222
     - 专家鱼饵:1:4:0.2222
+  7:
+    giveAllItems: true
+    items:
+    - 跳跃之瓶:1:1:0.0244
+    - 航鱼靴:1:1:0.025
+铁匣:
+  1:
+    giveAllItems: false
+    items:
+    - 金币:5:10:0.25
+  2:
+    giveAllItems: false
+    items:
+    - 铜矿石:12:21:0.1667
+    - 铁矿石:12:21:0.1667
+    - 银矿石:12:21:0.1667
+  3:
+    giveAllItems: false
+    items:
+    - 铜锭:4:7:0.2083
+    - 铁锭:4:7:0.2083
+    - 银锭:4:7:0.2083
+  4:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:2:4:0.25
+    - 敏捷药水:2:4:0.25
+    - 铁皮药水:2:4:0.25
+    - 再生药水:2:4:0.25
+    - 鱼鳃药水:2:4:0.25
+  5:
+    giveAllItems: false
+    items:
+    - 治疗药水:5:15:0.5
+    - 魔力药水:5:15:0.5
+  6:
+    giveAllItems: false
+    items:
+    - 专家鱼饵:2:4:0.3333
+    - 大师鱼饵:2:4:0.1667
+  7:
+    giveAllItems: true
+    items:
+    - 跳跃之瓶:1:1:0.0404
+    - 航鱼靴:1:1:0.0426
+金匣:
+  1:
+    giveAllItems: false
+    items:
+    - 金币:8:20:0.3333
+  2:
+    giveAllItems: false
+    items:
+    - 银矿石:25:34:0.2
+    - 金矿石:25:34:0.2
+  3:
+    giveAllItems: false
+    items:
+    - 银锭:8:11:0.2667
+    - 金锭:8:11:0.2667
+  4:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:2:5:0.3333
+    - 敏捷药水:2:5:0.3333
+    - 铁皮药水:2:5:0.3333
+    - 再生药水:2:5:0.3333
+    - 鱼鳃药水:2:5:0.3333
+  5:
+    giveAllItems: false
+    items:
+    - 治疗药水:5:20:0.5
+    - 魔力药水:5:20:0.5
+  6:
+    giveAllItems: false
+    items:
+    - 大师鱼饵:3:7:0.6667
+  7:
+    giveAllItems: true
+    items:
+    - 生命水晶:1:1:0.125
+珍珠木匣:
+  1:
+    giveAllItems: false
+    items:
+    - 银币:20:90
+    - 银币:20:90
+    - 银币:20:90
+    - 银币:20:90
+    - 银币:20:90
+    - 银币:20:90
+    - 银币:20:90
+    - 银币:20:90
+    - 金币:1:3
+    - 金币:1:5
+  2:
+    giveAllItems: false
+    items:
+    - 铜矿石:4:15:0.1429
+    - 铁矿石:4:15:0.1429
+    - 钴矿石:4:15:0.1429
+  3:
+    giveAllItems: false
+    items:
+    - 铜锭:2:5:0.1071
+    - 铁锭:2:5:0.1071
+    - 钴锭:2:5:0.1071
+  4:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:1:3:0.1429
+    - 敏捷药水:1:3:0.1429
+    - 铁皮药水:1:3:0.1429
+    - 再生药水:1:3:0.1429
+    - 鱼鳃药水:1:3:0.1429
+  5:
+    giveAllItems: false
+    items:
+    - 弱效治疗药水:5:15:0.3333
+    - 弱效魔力药水:5:15:0.3333
+  6:
+    giveAllItems: false
+    items:
+    - 初学者鱼饵:1:4:0.2222
+    - 专家鱼饵:1:4:0.2222
+  7:
+    giveAllItems: true
+    items:
+    - 跳跃之瓶:1:1:0.0244
+    - 航鱼靴:1:1:0.025
+秘银匣:
+  1:
+    giveAllItems: false
+    items:
+    - 金币:5:10:0.25
+  2:
+    giveAllItems: false
+    items:
+    - 铜矿石:12:21:0.1667
+    - 铁矿石:12:21:0.1667
+    - 银矿石:12:21:0.1667
+    - 钴矿:12:21:0.1667
+    - 秘银矿:12:21:0.1667
+  3:
+    giveAllItems: false
+    items:
+    - 铜锭:4:7:0.2083
+    - 铁锭:4:7:0.2083
+    - 银锭:4:7:0.2083
+    - 钴锭:4:7:0.2083
+    - 秘银锭:4:7:0.2083
+  4:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:2:4:0.25
+    - 敏捷药水:2:4:0.25
+    - 铁皮药水:2:4:0.25
+    - 再生药水:2:4:0.25
+    - 鱼鳃药水:2:4:0.25
+  5:
+    giveAllItems: false
+    items:
+    - 治疗药水:5:15:0.5
+    - 魔力药水:5:15:0.5
+  6:
+    giveAllItems: false
+    items:
+    - 专家鱼饵:2:4:0.3333
+    - 大师鱼饵:2:4:0.1667
+  7:
+    giveAllItems: true
+    items:
+    - 跳跃之瓶:1:1:0.0404
+    - 航鱼靴:1:1:0.0426
+钛金匣:
+  1:
+    giveAllItems: false
+    items:
+    - 金币:8:20:0.3333
+  2:
+    giveAllItems: false
+    items:
+    - 银矿石:25:34:0.2
+    - 金矿石:25:34:0.2
+    - 秘银矿:25:34:0.2
+    - 精金矿:25:34:0.2
+  3:
+    giveAllItems: false
+    items:
+    - 银锭:8:11:0.2667
+    - 金锭:8:11:0.2667
+    - 秘银锭:8:11:0.2667
+    - 精金锭:8:11:0.2667
+  4:
+    giveAllItems: false
+    items:
+    - 黑曜石皮药水:2:5:0.3333
+    - 敏捷药水:2:5:0.3333
+    - 铁皮药水:2:5:0.3333
+    - 再生药水:2:5:0.3333
+    - 鱼鳃药水:2:5:0.3333
+  5:
+    giveAllItems: false
+    items:
+    - 治疗药水:5:20:0.5
+    - 魔力药水:5:20:0.5
+  6:
+    giveAllItems: false
+    items:
+    - 大师鱼饵:3:7:0.6667
+  7:
+    giveAllItems: true
+    items:
+    - 生命水晶:1:1:0.125
 # 所有专家模式福袋都在下方按克苏鲁之眼福袋的格式写
 专家模式福袋:
+  史莱姆王:
+    1:
+      items:
+      - 皇家凝胶
+    2:
+      giveAllItems: false
+      amountToGive: 2
+      items:
+      - 忍者头盔
+      - 忍者胸甲
+      - 忍者护腿
+  荒漠灾虫:
+    1:
+      items:
+      - 珍珠碎片:30:40
+      - 珊瑚:30:40
+      - 海星:30:40
+      - 贝壳:30:40
+      - 天蓝石:1:1:0.3333
+    2:
+      giveAllItems: false
+      items:
+      - 海星召唤杖
+      - 水电剑
+      - 巴淋内德
+      - 水流喷射
   克苏鲁之眼:
     # 此处的1, 2...序号是将掉落物分为不同的部分（可以不是数字但不可以有重复），依照自上而下的顺序判定并给予玩家物品
     1:
@@ -62,23 +302,251 @@
       - 邪箭:20:49
       - 恶魔矿:30:87
       - 腐化种子:1:3
-      - 金币:3
+  菌生蟹:
+    1:
+      giveAllItems: false
+      items:
+      - 真菌块
+      - 菌杖
+      - 真菌爪
+      - 真菌枪
+      - 真菌回旋镖
+    2:
+      items:
+      - 发光蘑菇:25:35
   世界吞噬者:
     1:
       items:
+      - 星力手环
       - 蠕虫围巾
       - 恶魔矿:30:59
       - 暗影鳞片:10:19
-      - 金币:3
-  史莱姆王:
+  腐巢意志:
+    1:
+      giveAllItems: false
+      items:
+      - 腐蚀之雨法杖
+      - 阴雷
+      - 影流喷射器
+      - 沼泽之眼
+    2:
+      items:
+      - 腐烂之脑
+      - 腐化种子:10:15
+      - 腐肉:15:20
+      - 恶魔锭:15:20
+      - 腐烂物质:30:40
+  骷髅王:
     1:
       items:
-      - 皇家凝胶
-      - 金币
+      - 骨头手套
+      - 骨头:30:60
+      - 骷髅头法书:1:1:0.3333
+  史莱姆之神:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+      - 深渊之书
+      - 诡触之书
     2:
+      items:
+      - 魔能谐振仪
+      - 纯净凝胶:40:52
+  血肉之墙:
+    1:
+      giveAllItems: false
+      items:
+      - 战士徽章
+      - 游侠徽章
+      - 巫师徽章
+      - 召唤师徽章
+    2:
+      giveAllItems: false
+      items:
+      - 毁灭刃
+      - 发条突击步枪
+      - 激光步枪
+      - 鞭炮
+    3:
+      items:
+      - 恶魔之心
+  史莱姆皇后:
+    1:
       giveAllItems: false
       amountToGive: 2
       items:
-      - 忍者头盔
-      - 忍者胸甲
-      - 忍者护腿
+      - 水晶刺客兜帽
+      - 水晶刺客上衣
+      - 水晶刺客裤
+    2:
+      items:
+      - 失谐钩爪:1:1:0.3333
+      - 刃杖:1:1:0.3333
+      - 挥发明胶
+  极地之灵:
+    1:
+      giveAllItems: false
+      items:
+      - 冰寒神性
+      - 冰川之风
+      - 雪崩
+      - 冰晶风暴
+    2:
+      items:
+      - 极寒之魂
+      - 冰川精华:5:9
+  双子魔眼:
+    1:
+      items:
+      - 强效治疗药水:5:15
+      - 视域之魂:25:40
+      - 机械车轮片
+    2:
+      progressRequired: 机械三王
+      - 神圣锭:20:35
+  渊海灾虫:
+    1:
+      giveAllItems: false
+      items:
+      - 潜渊震荡者
+      - 巴淋诺提卡
+      - 水灌
+      - 深海权杖
+    2:
+      items:
+      - 海之烧灼:1:1:0.1
+  毁灭者:
+    1:
+      items:
+      - 强效治疗药水:5:15
+      - 力量之魂:25:40
+      - 机械车体片
+    2:
+      progressRequired: 机械三王
+      - 神圣锭:20:35
+  硫磺火元素:
+    1:
+      giveAllItems: false
+      items:
+      - 硫磺火矛
+      - 沉眠寻焰者
+      - 沸腾之火
+    2:
+      items:
+      - 舐火甲壳:1:1:0.33
+      - 地狱降临:1:1:0.1
+      - 魔鬼之庇护
+      - 混乱精华:5:9
+  机械骷髅王:
+    1:
+      items:
+      - 强效治疗药水:5:15
+      - 恐惧之魂:25:40
+      - 机械电池片
+    2:
+      progressRequired: 机械三王
+      - 神圣锭:20:35
+  灾厄之眼:
+    1:
+      giveAllItems: false
+      items:
+      - 憎恨
+      - 混乱火鞭
+      - 遗殇
+      - 混乱之祈祷
+    2:
+      items:
+      - 灾劫虚空
+      - 混乱石:1:1:0.33
+      - 再生护符:1:1:0.1
+      - 灾厄尘:30:35
+      - 混乱精华:10:15
+  世纪之花:
+    1:
+      giveAllItems: false
+      items:
+      - 榴弹发射器
+      - 金星马格南
+      - 爆裂藤蔓
+      - 吹叶机
+      - 种子弯刀
+    2:
+      items:
+      - 孢子囊
+      - 小瓶毒液:8:16
+      - 吉他斧:1:1:0.05
+      - 矮人法杖:1:1:0.5
+      - 刺钩:1:1:0.1
+  阿娜希塔和利维坦:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  白金星舰:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  石巨人:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  瘟疫使者歌莉娅:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  光之女皇:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  猪鲨公爵:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  毁灭魔像:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  星神游龙:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
+  月球领主:
+    1:
+      giveAllItems: false
+      items:
+      - 过载凝胶发射器
+    2:
+      items:
+      - 魔能谐振仪
